--- a/first_py_learning.ipynb
+++ b/first_py_learning.ipynb
@@ -9,11 +9,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n"
+      "swarnim\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(\"swarnim\")\n"
+   ]
   }
  ],
  "metadata": {
